--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
     "optional": "cpp",
     "system_error": "cpp",
     "regex": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "deque": "cpp",
+    "list": "cpp"
   },
   "C_Cpp.default.configurationProvider": "go2sh.cmake-integration"
 }
