complete insertionsort, mergesort

--- a/sort/forward_list/CMakeLists.txt
+++ b/sort/forward_list/CMakeLists.txt
@@ -6,7 +6,9 @@ set(CMAKE_CXX_STANDARD 11)
 add_definitions("-Wall -g")
 
 # add_executable(forward_list_bin quicksort_forwardlist.cc myforward_list.cc)
+# add_executable(forward_list_bin selectionsort_forwardlist.cc myforward_list.cc)
+# add_executable(forward_list_bin mergesort_forwardlist.cc myforward_list.cc)
 
-add_executable(forward_list_bin selectionsort_forwardlist.cc myforward_list.cc)
+add_executable(forward_list_bin insertionsort_forwardlist.cc myforward_list.cc)
 
 target_include_directories(forward_list_bin PUBLIC ${PROJECT_SOURCE_DIR})
