--- a/algorithm/graph/CMakeLists.txt
+++ b/algorithm/graph/CMakeLists.txt
@@ -2,7 +2,17 @@ cmake_minimum_required(VERSION 3.5)
 project(graph)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall")
-add_executable(testGraph_bin 
+add_executable(testgraph_bin 
      graph.cc
      testGraph.cc
+)
+
+add_executable(kruskal_bin
+     graph.cc
+     mst/kruskal.cc
+)
+
+target_include_directories(kruskal_bin
+     PUBLIC
+          ${PROJECT_SOURCE_DIR}
 )
