complete dijkstra.cc

--- a/algorithm/graph/CMakeLists.txt
+++ b/algorithm/graph/CMakeLists.txt
@@ -26,3 +26,23 @@ target_include_directories(prim_bin
      PUBLIC
           ${PROJECT_SOURCE_DIR}
 )
+
+add_executable(dijkstra_bin
+     graph.cc
+     single_source_shortest_path/dijkstra.cc
+)
+
+target_include_directories(dijkstra_bin
+     PUBLIC
+          ${PROJECT_SOURCE_DIR}
+)
+
+add_executable(bellman_ford_bin
+     graph.cc
+     single_source_shortest_path/bellman_ford.cc
+)
+
+target_include_directories(bellman_ford_bin
+     PUBLIC
+          ${PROJECT_SOURCE_DIR}
+)
